--- a/OwlBot_BackEnd/eecs_env/pyvenv.cfg
+++ b/OwlBot_BackEnd/eecs_env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /usr/local/opt/python@3.12/bin
+home = /usr/bin
 include-system-site-packages = false
-version = 3.12.6
-executable = /usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/bin/python3.12
-command = /usr/local/opt/python@3.12/bin/python3.12 -m venv /Users/vishalarvin/Documents/FALL 24/chatbotSE/eecs_chatbot/eecs_env
+version = 3.12.3
+executable = /usr/bin/python3.12
+command = /usr/bin/python3 -m venv /home/ubuntu/SEproject_Deployment/OwlBot_BackEnd/eecs_env
