--- a/OwlBot_BackEnd/.env
+++ b/OwlBot_BackEnd/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY='sk-tlql0E7C6UUU0ayaqcpPyfCC6--d67c5eYkoB1g4JET3BlbkFJUcmHbWyAHLI-qsMathBAa1zDb71XoJC1RGvubUoHYA'
 WEAVIATE_URL='https://qha4kbi2tqc1pabqvz1djg.c0.us-east1.gcp.weaviate.cloud'
 WEAVIATE_API_KEY='JUTRYyHNbt6iCU8bY4cL10zyFNcCVx8gmAX8'
+SECRET_KEY = "django-insecure-3nf7wg*5m%t%1@=r=!b19=pq*71g&al5xkj$_gh0u*#3xt6fh8"
