--- a/OwlBot_BackEnd/.env
+++ b/OwlBot_BackEnd/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY='YOUR_API_KEY'
-WEAVIATE_URL='YOUR_WEAVIATE_URL'
-WEAVIATE_API_KEY='YOUR_WEAVIATE_API_KEY'
-SECRET_KEY = 'YOUR_SECRET_KEY'
+OPENAI_API_KEY='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'
+WEAVIATE_URL='https://qha4kbi2tqc1pabqvz1djg.c0.us-east1.gcp.weaviate.cloud'
+WEAVIATE_API_KEY='JUTRYyHNbt6iCU8bY4cL10zyFNcCVx8gmAX8'
+SECRET_KEY = "django-insecure-3nf7wg*5m%t%1@=r=!b19=pq*71g&al5xkj$_gh0u*#3xt6fh8"
