--- a/OwlBot_BackEnd/.env
+++ b/OwlBot_BackEnd/.env
@@ -1,4 +1,4 @@
-OPENAI_API_KEY='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'
-WEAVIATE_URL='https://0z02x8kztgksuzmsbbjbig.c0.us-east1.gcp.weaviate.cloud'
-WEAVIATE_API_KEY='9G3KrcY0mGa0eof4m3jST1pHt2pRjEYjhCGE'
-SECRET_KEY = "django-insecure-3nf7wg*5m%t%1@=r=!b19=pq*71g&al5xkj$_gh0u*#3xt6fh8"
+OPENAI_API_KEY='YOUR OPEN AI API KEY'
+WEAVIATE_URL='YOUR URL'
+WEAVIATE_API_KEY='YOUR WEAVIATE API KEY'
+SECRET_KEY = "YOUR DJANGO SECRET KEY"
